random-strings/manifests/pingpong-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong # Pod name
  ports:
    - port: 2346 # Ingress port
      protocol: TCP
      targetPort: 8081 # App port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: teemukoivumaa/ping-pong:1.3.0
          imagePullPolicy: "Always"
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              path: /check
              port: 8081
          resources:
            limits:
              cpu: "500m"
              memory: "550Mi"
