random-strings/manifests/randomstrings-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-strings-svc
spec:
  type: ClusterIP
  selector:
    app: random-strings # Pod name
  ports:
    - port: 2345 # Ingress port
      protocol: TCP
      targetPort: 8080 # App port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-strings-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-strings
  template:
    metadata:
      labels:
        app: random-strings
    spec:
      containers:
        - name: random-strings
          image: teemukoivumaa/random-strings:1.2.1
          imagePullPolicy: "Always"
          readinessProbe:
            initialDelaySeconds: 40
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8080 
          resources:
            limits:
              cpu: "500m"
              memory: "550Mi"
          env:  # Define the environment variable
            - name: MESSAGE # Notice that the case is different here
              valueFrom:
                configMapKeyRef:
                  name: random-strings-configmap        # The ConfigMap this value comes from.
                  key: MESSAGE  # The key to fetch.
            - name: RANDOMSTRINGPORT
              valueFrom:
                configMapKeyRef:
                  name: random-strings-configmap
                  key: RANDOMSTRINGPORT
