random-strings/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: random-strings
  name: random-strings-svc
spec:
  type: LoadBalancer
  selector:
    app: random-strings # Pod name
  ports:
    - port: 2345 # Ingress port
      protocol: TCP
      targetPort: 8080 # App port
      name: random-strings
---
apiVersion: v1
kind: Service
metadata:
  namespace: random-strings
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: random-strings # Pod name
  ports:
    - port: 2346 # Ingress port
      protocol: TCP
      targetPort: 8081 # App port
---
apiVersion: v1
kind: Service
metadata:
  namespace: random-strings
  name: postgres-svc
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      name: web
